--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@prisma/client": "^5.7.1",
     "bcrypt": "^5.1.1",
     "fastify": "^4.25.2",
-    "tsc": "^2.0.4",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3",
     "vitest": "^1.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "typescript": "^5.3.3",
+    "tsx": "^4.7.0",
+    "tsc": "^2.0.4",
+    "@types/node": "^20.10.5",
     "@types/bcrypt": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
