--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "test": "vitest run",
-    "test:watch": "vitest "
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -19,14 +21,16 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0",
-    "tsc": "^2.0.4",
-    "@types/node": "^20.10.5",
     "@types/bcrypt": "^5.0.2",
+    "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
+    "@vitest/coverage-v8": "^1.1.1",
+    "@vitest/ui": "^1.1.1",
     "eslint": "^8.56.0",
-    "prisma": "^5.7.1"
+    "prisma": "^5.7.1",
+    "tsc": "^2.0.4",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
