--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma-rocketseat-challenge",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma-rocketseat-challenge",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/controllers",
+    "test:e2e:watch": "vitest --dir src/controllers",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -14,9 +19,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "^9.2.0",
+    "@fastify/jwt": "^7.2.4",
     "@prisma/client": "^5.7.1",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "fastify": "^4.25.2",
+    "npm-run-all": "^4.1.5",
     "vitest": "^1.1.0",
     "zod": "^3.22.4"
   },
