--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@fastify/cookie": "^9.2.0",
     "@fastify/jwt": "^7.2.4",
     "@prisma/client": "^5.7.1",
+    "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "fastify": "^4.25.2",
     "npm-run-all": "^4.1.5",
+    "supertest": "^6.3.3",
     "vitest": "^1.1.0",
     "zod": "^3.22.4"
   },
